--- a/tarakanrp.github.io/index.html
+++ b/tarakanrp.github.io/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" sizes="100x50" href="https://tarakanrp.github.io/files/pic/logo.png">
   <title>TarakanRP</title>
-  <link rel="stylesheet" href="https://tarakanrp.github.io/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <style>
 img.ots {
