--- a/bndse.github.io-end/aaa.html
+++ b/bndse.github.io-end/aaa.html
@@ -29,7 +29,7 @@ height: 312px;
 <div class="ctr">
 <a href="g/123456789"><img class="aaa" src="trash/aaa.png" alt="aaa"></a>
 <a href="g/box"><img class="aaa" src="trash/aaa.png" alt="aaa"></a>
-<a href="trash/1kill.mp3"><img class="aaa" src="trash/aaa.png" alt="aaa"></a>
+<a href="trash/kill.mp3"><img class="aaa" src="trash/aaa.png" alt="aaa"></a>
 <a href="g/box"><img class="aaa" src="trash/aaa.png" alt="aaa"></a>
 </div>
 </body>
