--- a/tarakanrp.github.io/index.html
+++ b/tarakanrp.github.io/index.html
@@ -20,14 +20,14 @@ img.ots {
 <body>
 <header class="header">
 <p class="ctr">
-<a href="https://tarakanrp.github.io"><img class="logo" src="https://tarakanrp.github.io/files/pic/logo.png" width="300px" height="75px" alt="TRP"></a>
+<a href="https://tarakanrp.github.io"><img class="logo" src="files/pic/logo.png" width="300px" height="75px" alt="TRP"></a>
 </p>
 </header>
 <p class="name">
-<a href="https://vk.com/tarakanrp" target="_blank"><img class="ots" src="https://tarakanrp.github.io/files/pic/vk.png" width="116px" height="116px" alt="vk"></a>
-<a href="https://www.youtube.com/channel/UCJHVutgaDIHwVs6Tm_5D_Vw" target="_blank"><img class="ots" src="https://tarakanrp.github.io/files/pic/youtube.png" width="168px" height="116px" alt="youtube"></a>
-<a href="https://www.tiktok.com/@tarakanrp" target="_blank"><img class="ots" src="https://tarakanrp.github.io/files/pic/tiktok.png" width="116px" height="116px" alt="tiktok"></a>
-<a href="https://www.twitter.com/tarakanrp" target="_blank"><img class="ots" src="https://tarakanrp.github.io/files/pic/twitter.png" width="116px" height="116px" alt="twitter"></a>
+<a href="https://vk.com/tarakanrp" target="_blank"><img class="ots" src="files/pic/vk.png" width="116px" height="116px" alt="vk"></a>
+<a href="https://www.youtube.com/channel/UCJHVutgaDIHwVs6Tm_5D_Vw" target="_blank"><img class="ots" src="files/pic/youtube.png" width="168px" height="116px" alt="youtube"></a>
+<a href="https://www.tiktok.com/@tarakanrp" target="_blank"><img class="ots" src="files/pic/tiktok.png" width="116px" height="116px" alt="tiktok"></a>
+<a href="https://www.twitter.com/tarakanrp" target="_blank"><img class="ots" src="files/pic/twitter.png" width="116px" height="116px" alt="twitter"></a>
 </p>
 </body>
 </html>
